[package]
name = "astr"
version = "0.3.1"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
edition = "2021"
repository = "https://github.com/lperlaki/astr-rs"
description = "A const lenght stack str"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[features]
default = ["std"]
std = []


[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
